--- a/releases/redis-auth.yaml
+++ b/releases/redis-auth.yaml
@@ -5,6 +5,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: redis-auth
-  namespace: demo
+  namespace: test
 data:
   values.yaml: cGFzc3dvcmQ6IGFkbWlu
